--- a/Ryujinx.desktop
+++ b/Ryujinx.desktop
@@ -7,7 +7,7 @@ Comment=Nintendo Switch video game console emulator
 Icon=/home/dummy/.local/share/icons/Ryujinx.png
 TryExec=/home/dummy/.local/share/Ryujinx/Ryujinx
 Exec=env COMPlus_EnableAlternateStackCheck=1 GDK_BACKEND=x11 /home/dummy/.local/share/Ryujinx/Ryujinx %f
-Categories=Game;Emulator;GTK;
+Categories=Game;ActionGame;
 MimeType=application/x-nx-nro;application/x-nx-nso;application/x-nx-nsp;application/x-nx-xci;
 Keywords=Switch;Nintendo;
 Terminal=true
